# stereozoom

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README.md  configure.ac  description.xml
docs/: Makefile.am  stereozoom2.doxyfile  stereozoom2.man  stereozoom2.texi
lib/: Makefile.am
pkgs/archlinux/: PKGBUILD
rsrc/: Makefile.am  forms.fbp  gstereozoom-image_panel.glade  gstereozoom-main_window.glade  gstereozoom.glade  gstereozoom.xml  gstereozoom2.desktop  winstaller.nsi
src/: Allegro4.cpp  Allegro4.h  Allegro5.cpp  Allegro5.h  AllegroImage.cpp  AllegroImage.h  AllegroImageGroup.cpp  AllegroImageGroup.h  Base_gui.cpp  Base_gui.h  Change.cpp  Change.h  Gstereozoom2.cpp  Gstereozoom2.h  ILLoader.cpp  ILLoader.h  Image.cpp  Image.h  Image_group.cpp  Image_group.h  Main_gui.cpp  Main_gui.h  MessageService.cpp  MessageService.h  PluginLoaders.h  Rectangle.cpp  Rectangle.h  frontend.cpp  generic_loader.h  gstereozoom.vala  module_interface.h  stereozoom.cpp  stereozoom.h  stereozoom2-msw.rc  stereozoom2.cpp  stereozoom2.h  stereozoom2_internal.h  stereozoom_internal.h  wxStereozoom.cpp  wxStereozoom.h
tests/: Makefile.am  test_component.cpp
web/: index.htm
