lib_LTLIBRARIES = libstereozoom2.la
libstereozoom2_la_SOURCES = ../src/Image_group.h ../src/Image_group.cpp ../src/Rectangle.h ../src/Rectangle.cpp ../src/Image.h ../src/Image.cpp ../src/stereozoom2.h ../src/stereozoom2.cpp ../src/stereozoom2_internal.h
include_HEADERS = ../src/Image_group.h ../src/Rectangle.h ../src/Image.h ../src/stereozoom2.h
libstereozoom2_la_LIBADD = $(allegro_LIBS)
